<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ui_flow</string>

    <!-- Common -->
    <string name="default_toolbar_title" translatable="false">@string/app_name</string>
    <string name="progress_dialog_loading" translation_description="Loading text in dialog">Loading…</string>
    <string name="sign_in_default" translation_description="Button text to sign in">Sign in</string>
    <string name="general_error" translation_description="Toast text flashing general error">An error has occurred.</string>

    <!-- Provider -->
    <string name="idp_name_google">Google</string>
    <string name="idp_name_facebook">Facebook</string>
    <string name="idp_name_twitter">Twitter</string>
    <string name="provider_name_email">Email</string>
    <string name="provider_name_phone">Phone</string>

    <!-- Auth method picker -->
    <string name="sign_in_with_google" translation_description="Sign in button text">Sign in with Google</string>
    <string name="sign_in_with_facebook" translation_description="Sign in button text">Sign in with Facebook</string>
    <string name="sign_in_with_twitter" translation_description="Sign in button text">Sign in with Twitter</string>
    <string name="sign_in_with_email" translation_description="Sign in button text">Sign in with email</string>
    <string name="sign_in_with_phone" translation_description="Sign in button text">Sign in with phone</string>

    <!-- Email common-->
    <string name="next_default" translation_description="Button text to continue">Next</string>
    <string name="email_hint" translation_description="Hint in email input field">Email</string>
    <string name="phone_hint" translation_description="Hint for phone input field">Phone Number</string>
    <string name="password_hint" translation_description="Hint for password input field">Password</string>
    <string name="required_field" translation_description="Inline error for required field">You can\'t leave this empty.</string>
    <string name="invalid_email_address" translation_description="Inline error for invalid email address">That email address isn\'t correct</string>
    <string name="missing_email_address" translation_description="Inline error for empty email address in input field">Enter your email address to continue</string>
    <string name="progress_dialog_checking_accounts" translation_description="Progress dialog text while checking for existing accounts">Checking for existing accounts…</string>

    <!-- Email sign up -->
    <string name="title_register_email" translation_description="Title for signup form">Sign up</string>
    <string name="name_hint" translation_description="Hint for last name input field">First &amp; last name</string>
    <string name="button_text_save" translation_description="Button text to save input form">Save</string>
    <string name="progress_dialog_signing_up" translation_description="Dialog text while waiting for server's signup response">Signing up…</string>
    <plurals name="error_weak_password" translation_description="Inline error for weak password">
        <item quantity="one" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
    <string name="email_account_creation_error" translation_description="Inline error for signup failure">Email account registration unsuccessful</string>
    <string name="error_user_collision" translation_description="Inline error when user signs up using an existing email account">An account already exists with that email address.</string>
    <string-array name="create_account_preamble" translation_description="Terms of service preamble" formatted="false">
        <item>By tapping %BTN% you are indicating that you agree to the %TOS% and the %PP%.</item>
        <item>By tapping %BTN% you are indicating that you agree to the %TOS%.</item>
        <item>By tapping %BTN% you are indicating that you agree to the %PP%.</item>
    </string-array>
    <string name="terms_of_service" translation_description="Link text to web url containing the app's terms of service">Terms of Service</string>
    <string name="privacy_policy" translation_description="Link text to web url containing the app's privacy policy">Privacy Policy</string>

    <!-- Idp/Email welcome back -->
    <string name="title_welcome_back_idp_prompt" translatable="false">@string/sign_in_default</string>
    <string name="title_welcome_back_password_prompt" translatable="false">@string/sign_in_default</string>
    <string name="welcome_back_idp_header" translation_description="Inline subtitle to users whose signup was interrupted since an existing account was detected">You already have an account</string>
    <string name="welcome_back_email_header" translation_description="Message for returning users">Welcome back!</string>
    <string name="welcome_back_idp_prompt" translation_description="Message to users that need to signin using existing IDP accounts">
        You\'ve already used <xliff:g id="email_addr" example="jane.doe@example.com" translation_description="">%1$s</xliff:g>.
        Sign in with <xliff:g id="provider_name" example="Google" translation_description="">%2$s</xliff:g> to continue.
    </string>
    <string name="welcome_back_password_prompt_body" translation_description="Message to users that need to signin using existing email accounts">
        You\'ve already used <xliff:g id="email_addr" example="jane.doe@example.com" translation_description="">%1$s</xliff:g>
        to sign in. Enter your password for that account.
    </string>
    <string name="progress_dialog_signing_in" translation_description="Progress dialog text">Signing in…</string>
    <string name="trouble_signing_in" translation_description="Link leading to forgot password flow">Trouble signing in?</string>

    <!-- Password recovery -->
    <string name="title_recover_password_activity" translation_description="Recover password screen title">Recover password</string>
    <string name="title_confirm_recover_password" translation_description="Password recovery confirmation message">Check your email</string>
    <string name="password_recovery_body" translation_description="Password recovery message body">Get instructions sent to this email that explain how to
        reset your password.</string>
    <string name="button_text_send" translation_description="Button text to send recovery email">Send</string>
    <string name="confirm_recovery_body" translation_description="Alert dialog displayed after password recovery email is sent">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="progress_dialog_sending" translation_description="Progress dialog while password recovery email is being sent">Sending…</string>
    <string name="error_email_does_not_exist" translation_description="Inline error when user attempt signin with invalid account">That email address doesn\'t match an existing account</string>

    <!-- Custom text -->
    <string name="auth_picker_description">Sign in to allow for backup\nand synchronization\nof your groups.</string>
    <string name="sign_up">Sign up</string>
    <string name="idp_name_email">Email</string>
    <string name="sign_in_privacy_policy">By signing in you agree with\n<u>Privacy Policy</u></string>
    <string name="privacy_policy_link" translatable="false">https://settleup.io/privacy_policy.html</string>

    <!-- accessibility -->
    <string name="accessibility_logo" translation_description="Content description for app logo">App logo</string>
    <string name="signed_in_with_specific_account" translation_description="Post signin message showing method of authentication">Signed in as <xliff:g id="email_addr" example="jane.doe@example.com" translation_description="">%1$s</xliff:g></string>

    <!-- phone number auth -->
    <string name="verify_phone_number_title" translation_description="Phone number entry form title">Enter your phone number</string>
    <string name="invalid_phone_number" translation_description="Inline error when phone number entered is invalid">Enter a valid phone number</string>
    <string name="enter_confirmation_code" translation_description="Phone number verification code entry form title">Enter the 6-digit code we sent to</string>
    <string name="resend_code_in" translation_description="Countdown timer text that the user needs to wait for before attempting to resend verification sms">Resend code in 0:%02d</string>
    <string name="verify_your_phone_title" translation_description="Button text to complete phone number verification">Verify your phone number</string>
    <string name="verifying" translation_description="Progress dialog text while phone number is being verified">Verifying …</string>
    <string name="retrieving_sms" translation_description="Progress dialog text when sms is being retrieved before auto-submit">Retrieving sms…</string>
    <string name="incorrect_code_dialog_body" translation_description="Inline error when incorrect sms verification code is being used to verify">Wrong code. Try again.</string>
    <string name="incorrect_code_dialog_positive_button_text" translation_description="Text to dismiss error alert dialog">OK</string>
    <string name="error_too_many_attempts" translation_description="Error message when the phone number has been used too many times">This phone number has been used too many times</string>
    <string name="error_quota_exceeded" translation_description="Error message when the Firebase project's quota has been exceeded.">There was a problem verifying your phone number</string>
    <string name="error_session_expired" translation_description="Error message when SMS confirmation code has expired.">This code is no longer valid</string>
    <string name="sign_in_with_phone_number" translation_description="Label for phone number input form">Sign in with phone number</string>
    <string name="done" translation_description="Progress dialog success transition once sms is sent">Done</string>
    <string name="verified" translation_description="Progress dialog success transition when phone number was verified">Verified!</string>
    <string name="code_sent" translation_description="Progress dialog success transition once sms is sent">Code sent!</string>
    <string name="resending" translation_description="Progress dialog text when user clicks on resend sms">Resending…</string>
    <string name="resend_code" translation_description="Link text to resend verification sms">Resend Code</string>
    <string name="verify_phone_number" translation_description="Button text to submit confirmation code and complete phone verification">Verify Phone Number</string>
    <string name="continue_phone_login" translation_description="Button text to submit phone number and send sms">Continue</string>
    <string name="sms_terms_of_service" translation_description="Fine print warning displayed below Verify Phone Number button">By tapping &#8220;%1$s&#8220;, an SMS may be sent. Message &amp; data rates may apply.</string>
</resources>
