<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Screen content has to be wrapped to scrollview to make screen resizing working. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="56dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FirebaseUI.WrapperStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FirebaseUI.Text.Heading"
                android:text="@string/welcome_back_email_header"/>

            <TextView
                style="@style/FirebaseUI.Text.BodyText"
                android:id="@+id/welcome_back_password_body"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    style="@style/FirebaseUI.TextInputLayout.PasswordField"
                    android:paddingTop="16dp"
                    app:hintTextAppearance="@style/FirebaseUI.Text.HintText"
                    app:errorTextAppearance="@style/FirebaseUI.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        style="@style/FirebaseUI.TextInputEditText.PasswordField"
                        android:id="@+id/password"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionDone"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/trouble_signing_in"
                    android:text="@string/trouble_signing_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/FirebaseUI.Text.Link"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/authui_colorAccent"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_background"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        style="@style/FirebaseUI.FullWidthButtonSettleUp"
        android:text="@string/sign_in_default"
        android:id="@+id/button_done"
        android:background="@color/authui_colorAccent"/>

</FrameLayout>